--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MyFragmentActivity"/>
-        <activity android:name=".MyListFragmentActivity"/>
+        <activity android:name=".frag.MyFragmentActivity" />
+        <activity android:name=".list.MyListFragmentActivity" />
     </application>
 
 </manifest>
